Bug fixes: Fixed gps sometimes not working due to altitude being null (edge case where GPS can't determine altitude) Fixed secondary scrollbar. Fixed H1 being way too long for some reason

--- a/major_project/styles.css
+++ b/major_project/styles.css
@@ -56,13 +56,6 @@ ul
     padding-left: 0;
 }
 
-h1
-{
-    left: 0;
-    width: var(--main-width);
-    position:sticky;
-}
-
 button
 {
     border:none;
@@ -101,9 +94,16 @@ input[type=text][name=searchbar]:focus
 main
 {
     position: relative;
+    left: 0;
     margin-top: 1em;
+    margin-left: 0;
+    margin-right: 0;
+    padding-left: 0;
+    padding-right: 0;
+    border-left:0;
+    border-right: 0;
 
-    width: 100vw;
+    width: 100;
 
     overflow-x:scroll;
 }
